@@ -25,5 +25,23 @@ std::tuple<QString, QStringList> popApiPath(const QStringList &path)
 	return std::make_tuple(path.at(0), tail);
 }
 
+int parseRequestInt(
+	const QJsonObject &request, const QString &key, int defaultValue,
+	int errorValue)
+{
+	QJsonValue value = request[key];
+	if(value.isNull() || value.isUndefined()) {
+		return defaultValue;
+	} else if(value.isDouble()) {
+		return value.toInt(errorValue);
+	} else if(value.isString()) {
+		bool ok;
+		int i = value.toString().toInt(&ok);
+		return ok ? i : errorValue;
+	} else {
+		return errorValue;
+	}
+}
+
 }
 
